  * debian/README.Debian: Updated & cleaned up
  * Sync with Ubuntu:
    * debian/copyright: Updated
    * debian/pulse-alsa.conf: set "show on" such that the default devices is
      displayed as an option
    * debian/libpulse-dev.install: Install cmake files
    * debian/pulseaudio-module-bluetooth.install: Updated
    * debian/pulseaudio.install: Install module-switch-on-port-available

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 17 Nov 2012 14:30:00 +0100

pulseaudio (2.1-2) experimental; urgency=low

  * debian/control: Use linux-any where applicable instead of specifying
    architectures by hand. (Closes: #682738)

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 09 Aug 2012 10:37:07 +0200

pulseaudio (2.1-1) experimental; urgency=low

  * New upstream stable release
  * debian/patches/webrtc-utils-needs-to-be-installed-before-module-ech.patch:
    - Added. Fix build
  * debian/patches/remove-analog-mono.patch:
    - Added. Remove analog-output-lfe-on-mono mixer path, although in principle
      Ac '97 hardware has a seperate mono LFE pin nothing seems to use it. To
      make matters worse it does confused pulseaudios port selection slightly
      which causes audio in virtualbox not to work out of the box
      (Closes: #673847)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 21 Jul 2012 17:38:52 +0200

pulseaudio (2.0-3) unstable; urgency=low

  [ Martin-Éric Racine ]
  * ChangeLog cleanup.
  * rules: fix the update-rc.d arguments to match our LSB header.

  [ Sjoerd Simons ]
  * Add webrtc echo cancellation support

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 19 May 2012 22:05:13 +0200

pulseaudio (2.0-2) unstable; urgency=low

  [ Martin-Éric Racine ]
  * Added myself to Uploaders.
  * Added patch 0001_man_page_typos.patch
  * control:
    - pulseaudio: don't Recommends pulseaudio-esound-compat (Closes: #671304).
    - Lintian: fixed duplicate short descriptions for -dbg.
    - Lintian: change versioned Conflicts to Breaks.