@@ -22,6 +22,8 @@ common-install-arch::
 		$(CURDIR)/debian/tmp/usr/share/alsa/alsa.conf.d
 	cp -a $(CURDIR)/debian/pulse-alsa.conf $(CURDIR)/debian/tmp/usr/share/alsa
 	dh_installman -ppulseaudio --language=C debian/tmp/usr/share/man/man5/default.pa.5
+	install -d $(CURDIR)/debian/tmp/usr/share/apport/package-hooks
+	cp $(CURDIR)/debian/apport-hook.py $(CURDIR)/debian/tmp/usr/share/apport/package-hooks/source_pulseaudio.py
 
 
 common-configure-arch::
