@@ -23,8 +23,9 @@ pulseaudio (2.99.1-1) UNRELEASED; urgency=low
     * debian/libpulse-dev.install: Install cmake files
     * debian/pulseaudio-module-bluetooth.install: Updated
     * debian/pulseaudio.install: Install module-switch-on-port-available
+    * debian/{pulseaudio.install,apport-hook.py}: Install apport hook
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sat, 17 Nov 2012 14:30:00 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 17 Nov 2012 14:43:35 +0100
 
 pulseaudio (2.1-2) experimental; urgency=low
 
